schedule, sponsors, judges

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="#about">About</a>
                     <a href="#schedule">Schedule</a>
                     <a href="#sponsors">Sponsors</a>
+                    <a href="judges">Judges</a>
                     <a href="#faq">FAQ</a>
                 </div>
             </div>
@@ -60,7 +61,7 @@
                     </div>
                     <div class="info-box">
                         <p class="title">5+ Comprehensive Coding Workshops</p>
-                        <p class="content">We plan on hosting workshops for Python, web development, Arduino C, machine learning, Git/Github, and more by request.</p>
+                        <p class="content">We plan on hosting workshops for <b>Python</b>, <b>web development</b>, <b>Arduino C</b>, <b>machine learning</b>, <b>Git/Github</b>, and more by request.</p>
                     </div>
                 </div>
                 <div class="info-column">
@@ -73,7 +74,7 @@
                         <p class="content">Details to be announced.</p>
                     </div>
                     <div class="info-box">
-                        <p class="title"> 10 Workshops</p>
+                        <p class="title"> Workshops</p>
                         <p class="content">Details to be announced.
                             (this is gonna be a lot longer so you will be able to see the gradient more: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.)
                         </p>
@@ -86,24 +87,24 @@
         </div>
 
         <div class="schedule">
-            <div class="day">
+            <div class="day row1">
                 <p class="title">Day 1</p>
                 <table id="day1">
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check -In</td>
+                        <td class="event">Check -In</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Machine Learning Workshop</td>
+                        <td class="event">Event 1</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Some shorter name</td>
+                        <td class="event">Event 1</td>
                     </tr>
                     <tr>
-                        <td class="time">05:55 AM</td>
-                        <td>Super Smash Brothers Ultimate Tournament</td>
+                        <td class="time">10:55 AM</td>
+                        <td class="event">Event 1</td>
                     </tr>
                 </table>
             </div>
@@ -112,19 +113,19 @@
                 <table id="day2">
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">Check-In</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">Event 10</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">Event 14</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">Event 15</td>
                     </tr>
                 </table>
             </div>
@@ -133,22 +134,39 @@
                 <table id="day3">
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">Breakfast</td>
                     </tr>
                     <tr>
                         <td class="time">9:00 AM</td>
-                        <td>Check-In</td>
+                        <td class="event">End of hackathon</td>
                     </tr>
-                    <tr>
-                        <td style="height:112px"></td>
-                    </tr>
-                    <tr>
+
                 </table>
             </div>
         </div>
+
+        <div class="page4">
+            <p class="title" id="sponsors">Sponsors</p>
+
+            <div class="coming-soon title">Coming Soon</div>
+            <p class="content">IndyHacks is made possible by our amazing sponsors and our kind community. <br> Interested in sponsoring us? Visit our <a href="sponsor">sponsors page</a> <br> or donate to us directly <a href="donate">here</a>.</p>
+
+            <p class="title" id="judges">Judges</p>
+
+            <div class="coming-soon title">Coming Soon</div>
+            <p class="content">Interested judging or mentoring at IndyHacks? Email us at <br> <a href="mailto: indyhacks2023@gmail.com" >indyhacks2023@gmail.com</a></p>
+
+
+            <p class="title" id="faq">Frequently Asked Questions</p>
+
+        </div>
+
+        <div class="faq">
+            
+        </div>
+
                 
         <script src="./multiple.js/multiple.js"></script>
-        <script src="script.js"></script>
-        <!-- <script src="./multiple.js/multiple.js"></script> -->
+        <script src="script.js" defer></script>
     </body>
 </html>
