bruh image address

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="faq-container">
                     <button class="question">Where is the hackathon being held?</button>
                     <div class="answer">IndyHacks will be held in person at the large gym of <a href="https://www.google.com/maps/place/Independence+High+School+Gym/@37.3703818,-121.8598855,17.96z/data=!4m10!1m2!2m1!1sindependence+high+school!3m6!1s0x808fcd679c855fd7:0xa9aabb151449accf!8m2!3d37.3705004!4d-121.8588069!15sChhpbmRlcGVuZGVuY2UgaGlnaCBzY2hvb2ySARBneW1uYXNpdW1fc2Nob29s4AEA!16s%2Fg%2F11j8_6127k?entry=ttu">Independence High School</a> (629 N Jackson Ave, San Jose, CA 95133).
-                        <img src="/assets/location.png">
+                        <img src="assets/location.png">
                     </div>
                 </div>
 
@@ -266,12 +266,12 @@
             <p class="title">Team</p>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="/team/Haoyun_Snow_Luo.jpg">
+                    <img src="team/Haoyun_Snow_Luo.jpg">
                     <p class="name">Haoyun (Snow) Luo</p>
                     <p class="role">Director, Operations</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Vincent Nguyen</p>
                     <p class="role">Operations</p>
                 </div>
@@ -284,46 +284,46 @@
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Eugene Lin</p>
                     <p class="role">Finance</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Nathan Tran</p>
                     <p class="role">Finance</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Thomas Zhang</p>
                     <p class="role">Finance</p>
                 </div>
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="/team/Ajay_Singh.jpg">
+                    <img src="team/Ajay_Singh.jpg">
                     <p class="name">Ajay Singh</p>
                     <p class="role">Logistics</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Tommy Vo</p>
                     <p class="role">Logistics</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/Tony_Dang.jpg">
+                    <img src="team/Tony_Dang.jpg">
                     <p class="name">Tony Dang</p>
                     <p class="role">Logistics</p>
                 </div>
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="/team/default.jpg">
+                    <img src="team/default.jpg">
                     <p class="name">Crystal Nguyen</p>
                     <p class="role">Media</p>
                 </div>
                 <div class="team-member">
-                    <img src="/team/Kai_Nhan.jpg">
+                    <img src="team/Kai_Nhan.jpg">
                     <p class="name">Kai Nhan</p>
                     <p class="role">Media</p>
                 </div>
