put in place holders

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <div class="page2">
             <div id="about">
                 <p class="title">ABOUT</p>
-                <p class="content">    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="content">    
+                    Join us at IndyHacks this November for our first ever large scale hackathon! You will have 24 hours to turn your ideas into life, be it an innovative solution to a serious problem, or a fun project that you've always wanted to make, IndyHacks is the place to do so. 
+                    Never had any experience with coding? We've got you covered as well, join us on Friday for our comprehensive learnathon, where everyone is going out of regardless of their skill level. 
+                </p>
             </div>
 
             <div class="info">
@@ -260,7 +263,7 @@
             </div>
         </div>
 
-        <!-- <div class="divider"></div> -->
+        <div class="divider"></div>
 
         <div class="team">
             <p class="title">Team</p>
@@ -271,7 +274,7 @@
                     <p class="role">Director, Operations</p>
                 </div>
                 <div class="team-member">
-                    <img src="team/default.jpg">
+                    <img src="team/Vincent Nugyen.jpg">
                     <p class="name">Vincent Nguyen</p>
                     <p class="role">Operations</p>
                 </div>
@@ -306,7 +309,7 @@
                     <p class="role">Logistics</p>
                 </div>
                 <div class="team-member">
-                    <img src="team/default.jpg">
+                    <img src="team/Tommy_Vo.jpg">
                     <p class="name">Tommy Vo</p>
                     <p class="role">Logistics</p>
                 </div>
@@ -318,7 +321,7 @@
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="team/default.jpg">
+                    <img src="team/Crystal_Nguyen.jpg">
                     <p class="name">Crystal Nguyen</p>
                     <p class="role">Media</p>
                 </div>
