--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -10,7 +10,7 @@
         <title>Sponsor IndyHacks</title>
     </head>
     <body>
-        sponsor us pls we need money
+        coming soon
     </body>
 
 </html>
