works on mobile except top bar

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p class="title">Day 1 Learnathon*</p>
                         <p class="content">Friday November 10th (Veteran's Day)</p>
                     </div>
-                    <div class="info-box">
+                    <div class="info-box info-box-slim">
                         <p class="title">5+ Comprehensive Coding Workshops</p>
                         <p class="content">We plan on hosting workshops for <b>Python</b>, <b>web development</b>, <b>Arduino C</b>, <b>machine learning</b>, <b>Git/Github</b>, and more by request.</p>
                     </div>
@@ -72,14 +72,13 @@
                         <p class="title">Day 2 - 3 Hackathon*</p>
                         <p class="content">Saturday - Sunday November 11th - 12th</p>
                     </div>
-                    <div class="info-box">
+                    <div class="info-box info-box-slim">
                         <p class="title">Prizes</p>
                         <p class="content">Details to be announced.</p>
                     </div>
-                    <div class="info-box">
+                    <div class="info-box info-box-slim">
                         <p class="title"> Workshops</p>
                         <p class="content">Details to be announced.
-                            (this is gonna be a lot longer so you will be able to see the gradient more: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.)
                         </p>
                     </div>
                 </div>
