fully mobile compatible?

--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
                         <img src="assets/logo.png" alt="IndyHacks logo">
                     </a>
                 </div>
-                <div class="navigation">
+                <div class="navigation desktop-bar">
                     <a href="#about">About</a>
                     <a href="#schedule">Schedule</a>
                     <a href="#sponsors">Sponsors</a>
                     <a href="#judges">Judges</a>
                     <a href="#faq">FAQ</a>
                 </div>
+                <div class="navigation mobile-bar">
+                    <p onclick="operateDropdown()" href="#faq">&#9776;</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="#about">About</a>
+                <a href="#schedule">Schedule</a>
+                <a href="#sponsors">Sponsors</a>
+                <a href="#judges">Judges</a>
+                <a href="#faq">FAQ</a>
             </div>
             <div class="title-block">
                 <div class="title">IndyHacks</div>
