quality of life

--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
             </div>
         </div>
 
+        <button id="back-to-top" onclick="scrollToTop()">
+            <p>Back to <br> Top</p>
+        </button>
+
         <script src="./multiple.js/multiple.js"></script>
         <script src="script.js" defer></script>
     </body>
