--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="details">November 10th - 12th</div>
                 <div class="details">San Jose, CA</div>
                 <div class="registration">
-                    <button class="registration-button">Register</button>
+                    <a href="https://rp3td17fy0f.typeform.com/to/h7nxoZUl" target="_blank" class="registration-button">Register</a>
                 </div>
             </div>
         </div>
