--- a/index.html
+++ b/index.html
@@ -292,7 +292,9 @@
             </div>
         </div>
 
-        <div class="divider"></div>
+        <div class="divider">
+            <div class="line"></div>
+        </div>
 
         <div class="team">
             <p class="title">Team</p>
