--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="details">November 10th - 12th</div>
                 <div class="details">San Jose, CA</div>
                 <div class="registration">
-                    <a href="https://rp3td17fy0f.typeform.com/to/h7nxoZUl" target="_blank" class="registration-button">Register</a>
+                    <a href="" target="_blank" class="registration-button">Register has Closed.</a>
                 </div>
             </div>
         </div>
